# EyBreath

./: CMakeLists.txt  EyBreathProject.ipynb  README.md  br100_close_dstt_f8-3-3_s1-1_p2-1_d04_delta.npz.3.T-2000_metric.npz  breath.interested  breath.interested_speaker_dict.txt  breath_selected_100  breath_unknown_100  constants.py  conv_lstm.py  conv_tdnn.py  conv_tdnn_v0.2.py  conv_tdnn_v0.2.py.bkp  data_prepare.py  ey.interested  ey.interested_consq_speaker_dict.txt  ey.interested_speaker_dict.txt  ey100_closeset_dstt_lstm_f5-3-3_s1-1_p2-1_d05_delta.npz.1.T-2000_metric.npz  ey_selected_100  ey_unknown_100  eybreath_data_prepare.py  featvec_breath.list  featvec_ey.list  k_net.py  select_data.py  show_log_spec.m  show_net_results.py  speaker_id.cc  speaker_identification.cc  speaker_identification.py  vis_features.py  w_net.py
CQT_toolbox_2013/: DEMO.m  PITCHSHIFTING.m  conv_wav_2_constq.m
drafts/: net_structure.pptx
show_logspecs/: j960522a_72149.80-7200_40filts.lspec.ascii  j960522a_72155.80-7200_40filts.lspec.ascii  j960522a_72171.80-7200_40filts.lspec.ascii  j960522a_72201.80-7200_40filts.lspec.ascii  j960522a_72211.80-7200_40filts.lspec.ascii  j960531c_77271.80-7200_40filts.lspec.ascii  j960531d_77887.80-7200_40filts.lspec.ascii  j960607a_78347.80-7200_40filts.lspec.ascii  j960607a_78513.80-7200_40filts.lspec.ascii  j960607a_78601.80-7200_40filts.lspec.ascii  j960617_85701.80-7200_40filts.lspec.ascii  j960617_85727.80-7200_40filts.lspec.ascii  j960617_86927.80-7200_40filts.lspec.ascii  j960618b_88083.80-7200_40filts.lspec.ascii  j960618b_88123.80-7200_40filts.lspec.ascii  show_log_spec.m  show_logspecs.m  test_show_logspec.m  visualize_spectrums.m
